--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Manage Ideas</h1>
 
 <table class="table">
@@ -11,6 +9,7 @@
       <th>End</th>
       <th>Tag</th>
       <th>User</th>
+      <th>Comments</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,11 +23,12 @@
         <td><%= idea.end %></td>
         <td><%= idea.tag %></td>
         <td><%= idea.user.first_name %></td>
+        <td><%= idea.comments.count %></td>
         <td><%= link_to 'Show', idea %></td>
-        <% if idea.user == current_user %>
-          <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-          <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+          <% if idea.user == current_user %>
+            <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
+            <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
       </tr>
     <% end %>
   </tbody>
