--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Idea</h1>
+<h1>Create A New Idea</h1>
 
+<!-- New Idea Form -->
 <%= render 'form', idea: @idea %>
 
+<!-- Navigation -->
 <%= link_to 'Back', ideas_path %>
