--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,37 +1,19 @@
-<% if notice.present? %>  
-  <p class="alert alert-info">
-    <%= notice %>
-  </p>
-<% end %>
+<!-- Provides Idea information -->
+<%= render 'idea', idea: @idea %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @idea.title %>
-</p>
-
-<p>
-  <strong>Destination:</strong>
-  <%= @idea.destination %>
-</p>
-
-<p>
-  <strong>Start:</strong>
-  <%= @idea.start %>
-</p>
-
-<p>
-  <strong>End:</strong>
-  <%= @idea.end %>
-</p>
-
-<p>
-  <strong>Tag:</strong>
-  <%= @idea.tag %>
-</p>
-
-<p>Commenting box here</p>
-
+<!-- Options for Idea modification or navigation -->
 <% if @idea.user == current_user %>
   <%= link_to 'Edit', edit_idea_path %> |
 <% end %>
 <%= link_to 'Back', ideas_path %>
+
+<br><br>
+
+<!-- Comments Section -->
+<%= render 'comments/comment' %>
+
+<!-- Google Map -->
+<%= render 'map' %>
+
+<!-- Hotwire -->
+<%= render 'hotwire' %>
