--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,33 +17,43 @@
   </head>
 
   <body>
+    <!-- Container for Bootstrap CSS -->
     <div class="container">
       <header>
         <small class="text-muted">
           <% if user_signed_in? %> 
-            Welcome, <%= current_user %> . <%= link_to "Sign Out", destroy_user_session_url, method: :delete %>
+            Welcome, <%= current_user.first_name %> . <%= link_to "Sign Out", destroy_user_session_url, method: :delete %>
           <% else %>
             <%= link_to "Sign In", new_user_session_path %>
           <% end %>
         </small>
       </header>
-      <nav class="navbar navbar-light bg-light justify-content-between">
+
+      <!-- Nav Menu -->
+      <nav class="navbar navbar-light bg-light justify-content-between sticky-top">
         <a class="navbar-brand" href="/">NIADA Travel // <!--<img src="/logo.png">--></a>
-        <a class="navbar-item">
-          <%= link_to "The List", list_url %>
-        </a>
         <a class="navbar-item">
           <%= link_to "Manage Ideas", ideas_url %>
         </a>
         <a class="navbar-item">
           <%= link_to "Account", edit_user_registration_url %>
         </a>
+        <!-- form from bootstrap 
         <form class="form-inline">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
+        <!-- Search Bar -->
+        <div class="form-inline">
+          <%= form_tag(ideas_path, :method => "get", id: "search-form") do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Ideas" %>
+            <%= submit_tag "Search", :name => nil %>
+          <% end %>
+        </div>
       </nav>
       <br><br>
+
+      <!-- Content loaded here -->
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <% if notice.present? %>  
@@ -52,6 +62,14 @@
             </p>
           <% end %>
         	<%= yield %>
+          <br><br>
+          <hr>
+          
+          <footer class="sticky-footer">
+            <p>
+              © NIADA Travel 2018
+            </p>
+          </footer>
         </div>
       </div>
     </div>
