--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -21,6 +21,10 @@
     <%= form.text_field :destination, id: :idea_destination, placeholder: "Location...", class: "form-control" %>
   </div>
 
+  <div id="suggestions" class="form-group">
+   
+  </div>
+
   <div class="form-group">
     <%= form.label :start %>
     <%= form.date_select :start, id: :idea_start %>
